--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,10 @@ body {
 .navbar-dark {
     background-color: #512DA8;
 }
+.designform {
+    margin: 20px 20px;
+}
+#button1{
+    width: 100%;
+    
+}
