--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,9 @@ body {
     width: 100%;
     
 }
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
